--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8.1"
 dataclass-sqlalchemy-mixins = "^0.3.4"
-sqlalchemy = "^1.4.0"
+sqlalchemy = {version=">=1.4.2"}
 
 
 [tool.poetry.group.dev.dependencies]
